# fretDance_rust

./: .gitignore  Cargo.toml  build_dist.bat  readme.md  readmeCN.md  说明书.md
benchs/: right_hand_pool_benchmark.rs
src/: animate.rs  egui.rs  fret_dancer.rs  guitar.rs  hand.rs  lib.rs  main.rs  midi.rs  recorder.rs  ui.rs  utils.rs
src/animate/: animator.rs
src/guitar/: guitar_chord.rs  guitar_instance.rs  guitar_note.rs  guitar_string.rs  music_note.rs
src/hand/: left_finger.rs  left_hand.rs  right_finger.rs  right_hand.rs
src/midi/: midi_to_note.rs
src/recorder/: left_hand_recorder.rs  recorder_pool.rs  right_hand_recorder.rs
src/ui/: about.rs  app.rs  avatar.rs  avatar_display.rs  execute_operation.rs  midi_info_scan.rs  parameter_setting.rs  show_console.rs  theme.rs
src/utils/: compare_json.rs  util_methods.rs
